--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -537,7 +537,7 @@
 </p>
 
 
-<figure id="orgf40f517">
+<figure id="orga99d81a">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
