--- a/html/dotnet/1-csharp.html
+++ b/html/dotnet/1-csharp.html
@@ -36,7 +36,7 @@
 </p>
 
 
-<figure id="org19919d9">
+<figure id="org5a49dda">
 <img src="img/01-hello-compile.png" alt="01-hello-compile.png" width="600px">
 
 </figure>
