--- a/.sitemap.html
+++ b/.sitemap.html
@@ -24,11 +24,11 @@
 </ul></li>
 <li>191
 <ul class="org-ul">
-<li><a href="191/index.html">Report of 191</a></li>
+<li><a href="191/index.html">191</a></li>
 </ul></li>
 <li>192
 <ul class="org-ul">
-<li><a href="192/index.html">Report of 192</a></li>
+<li><a href="192/index.html">192</a></li>
 </ul></li>
 <li>vvv
 <ul class="org-ul">
