--- a/190/index.html
+++ b/190/index.html
@@ -20,16 +20,16 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org9b411ad">1. 信息</a></li>
-<li><a href="#orge13c043">2. 结果</a></li>
-<li><a href="#orgcc2d105">3. 寒假作业 (2024-01-15)</a></li>
+<li><a href="#orgb14e63f">1. 信息</a></li>
+<li><a href="#org82498a5">2. 结果</a></li>
+<li><a href="#org2ebcff8">3. 寒假作业 (2024-01-15)</a></li>
 </ul>
 </div>
 </nav>
 
 
-<section id="outline-container-org9b411ad" class="outline-2">
-<h2 id="org9b411ad"><span class="section-number-2">1.</span> 信息</h2>
+<section id="outline-container-orgb14e63f" class="outline-2">
+<h2 id="orgb14e63f"><span class="section-number-2">1.</span> 信息</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li>学习委员: 黄军帮</li>
@@ -75,10 +75,10 @@
 </div>
 </section>
 
-<section id="outline-container-orge13c043" class="outline-2">
-<h2 id="orge13c043"><span class="section-number-2">2.</span> 结果</h2>
+<section id="outline-container-org82498a5" class="outline-2">
+<h2 id="org82498a5"><span class="section-number-2">2.</span> 结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org8b08486">
+<table id="org678d184">
 
 
 <colgroup>
@@ -982,8 +982,8 @@
 </div>
 </section>
 
-<section id="outline-container-orgcc2d105" class="outline-2">
-<h2 id="orgcc2d105"><span class="section-number-2">3.</span> 寒假作业 (2024-01-15)</h2>
+<section id="outline-container-org2ebcff8" class="outline-2">
+<h2 id="org2ebcff8"><span class="section-number-2">3.</span> 寒假作业 (2024-01-15)</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 做一个求取 BMI 的控制台应用:
