--- a/192/index.html
+++ b/192/index.html
@@ -20,25 +20,26 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org66adbf5">1. 班级信息</a></li>
-<li><a href="#org2dbad8e">2. 测验结果</a></li>
-<li><a href="#org740601e">3. 寒假作业 (2024-01-16)</a></li>
-<li><a href="#orgb86dc60">4. 知识点备忘</a>
+<li><a href="#org3d1940c">1. 班级信息</a></li>
+<li><a href="#orgf041657">2. 测验结果</a></li>
+<li><a href="#orgfe26f37">3. 寒假作业 (2024-01-16)</a></li>
+<li><a href="#org48328bd">4. 知识点备忘</a>
 <ul>
-<li><a href="#org0873e8c">4.1. 将 string 转换为 double 有哪些方式?</a></li>
+<li><a href="#orgdcd8973">4.1. 将 string 转换为 double 有哪些方式?</a></li>
 </ul>
 </li>
-<li><a href="#org8df33fa">5. 练习题备忘</a>
+<li><a href="#org7094f27">5. 练习题备忘</a>
 <ul>
-<li><a href="#orgba259a7">5.1. 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</a></li>
+<li><a href="#org881aac6">5.1. 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </nav>
 
-<section id="outline-container-org66adbf5" class="outline-2">
-<h2 id="org66adbf5"><span class="section-number-2">1.</span> 班级信息</h2>
+
+<section id="outline-container-org3d1940c" class="outline-2">
+<h2 id="org3d1940c"><span class="section-number-2">1.</span> 班级信息</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li>班主任: 朱良斌</li>
@@ -47,10 +48,10 @@
 </div>
 </section>
 
-<section id="outline-container-org2dbad8e" class="outline-2">
-<h2 id="org2dbad8e"><span class="section-number-2">2.</span> 测验结果</h2>
+<section id="outline-container-orgf041657" class="outline-2">
+<h2 id="orgf041657"><span class="section-number-2">2.</span> 测验结果</h2>
 <div class="outline-text-2" id="text-2">
-<table id="org602b7d7">
+<table id="orgb653b04">
 
 
 <colgroup>
@@ -851,8 +852,8 @@
 </section>
 
 
-<section id="outline-container-org740601e" class="outline-2">
-<h2 id="org740601e"><span class="section-number-2">3.</span> 寒假作业 (2024-01-16)</h2>
+<section id="outline-container-orgfe26f37" class="outline-2">
+<h2 id="orgfe26f37"><span class="section-number-2">3.</span> 寒假作业 (2024-01-16)</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 C/S架构编程，做完第一章所有的上机题:
@@ -864,12 +865,12 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 </section>
 
-<section id="outline-container-orgb86dc60" class="outline-2">
-<h2 id="orgb86dc60"><span class="section-number-2">4.</span> 知识点备忘</h2>
+<section id="outline-container-org48328bd" class="outline-2">
+<h2 id="org48328bd"><span class="section-number-2">4.</span> 知识点备忘</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org0873e8c" class="outline-3">
-<h3 id="org0873e8c"><span class="section-number-3">4.1.</span> 将 string 转换为 double 有哪些方式?</h3>
+<div id="outline-container-orgdcd8973" class="outline-3">
+<h3 id="orgdcd8973"><span class="section-number-3">4.1.</span> 将 string 转换为 double 有哪些方式?</h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 在 C# 中，转换 string 为 double 的方式主要有三种:
@@ -948,12 +949,12 @@ Console.<span style="color: #fabd2f;">WriteLine</span><span style="color: #45858
 </div>
 </section>
 
-<section id="outline-container-org8df33fa" class="outline-2">
-<h2 id="org8df33fa"><span class="section-number-2">5.</span> 练习题备忘</h2>
+<section id="outline-container-org7094f27" class="outline-2">
+<h2 id="org7094f27"><span class="section-number-2">5.</span> 练习题备忘</h2>
 <div class="outline-text-2" id="text-5">
 </div>
-<div id="outline-container-orgba259a7" class="outline-3">
-<h3 id="orgba259a7"><span class="section-number-3">5.1.</span> 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</h3>
+<div id="outline-container-org881aac6" class="outline-3">
+<h3 id="org881aac6"><span class="section-number-3">5.1.</span> 下面是一个求取 BMI 的控制台应用，请找出并修改所有 BUG</h3>
 <div class="outline-text-3" id="text-5-1">
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #fb4933;">using</span> <span style="color: #83a598;">System</span>;
