--- a/vvv/1-csharp.html
+++ b/vvv/1-csharp.html
@@ -20,21 +20,21 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org4bf5ff6">1. 基本规则</a></li>
+<li><a href="#org36b361c">1. 基本规则</a></li>
 </ul>
 </div>
 </nav>
 
 
-<section id="outline-container-org4bf5ff6" class="outline-2">
-<h2 id="org4bf5ff6"><span class="section-number-2">1.</span> 基本规则</h2>
+<section id="outline-container-org36b361c" class="outline-2">
+<h2 id="org36b361c"><span class="section-number-2">1.</span> 基本规则</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 人有人的语言，电脑有电脑的语言。连接两者的是 <b>编译器</b> 。
 </p>
 
 
-<figure id="org0d8efa1">
+<figure id="orgec1ef4a">
 <img src="img/01-hello-compile.png" alt="01-hello-compile.png" width="600px">
 
 </figure>
