--- a/191/index.html
+++ b/191/index.html
@@ -25,14 +25,7 @@
 <li><a href="#org42a84ad">3. 寒假作业 (2024-01-15)</a></li>
 <li><a href="#org3d7cc04">4. 练习题备忘</a>
 <ul>
-<li><a href="#org83ea615">4.1. 循环和条件判断</a>
-<ul>
-<li><a href="#orgbb9ffce">4.1.1. 打印从 1 到 1000 的所有数</a></li>
-<li><a href="#orgc5780cb">4.1.2. 求取从 1 到 1000 的所有数的和</a></li>
-<li><a href="#orgf2d2fdc">4.1.3. 求取从 1 到 1000 的所有数的平均数</a></li>
-<li><a href="#orgbb2aeee">4.1.4. 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</a></li>
-</ul>
-</li>
+<li><a href="#org83ea615">4.1. 循环和条件判断</a></li>
 </ul>
 </li>
 </ul>
@@ -540,7 +533,7 @@
 </p>
 
 
-<figure id="orgc693111">
+<figure id="org876b1ab">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -562,11 +555,7 @@
 <div id="outline-container-org83ea615" class="outline-3">
 <h3 id="org83ea615"><span class="section-number-3">4.1.</span> 循环和条件判断</h3>
 <div class="outline-text-3" id="text-4-1">
-</div>
-<div id="outline-container-orgbb9ffce" class="outline-4">
-<h4 id="orgbb9ffce"><span class="section-number-4">4.1.1.</span> 打印从 1 到 1000 的所有数</h4>
-<div class="outline-text-4" id="text-4-1-1">
-<details><summary>答案仅供参考</summary>
+<details><summary>打印从 1 到 1000 的所有数</summary>
 
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr">1: </span><span style="color: #fb4933;">for</span> <span style="color: #458588;">(</span><span style="color: #d3869b;">int</span> <span style="color: #83a598;">i</span> = 1; i &lt;= 1000; i++<span style="color: #458588;">)</span>
@@ -577,13 +566,8 @@
 </div>
 
 </details>
-</div>
-</div>
 
-<div id="outline-container-orgc5780cb" class="outline-4">
-<h4 id="orgc5780cb"><span class="section-number-4">4.1.2.</span> 求取从 1 到 1000 的所有数的和</h4>
-<div class="outline-text-4" id="text-4-1-2">
-<details><summary>答案仅供参考</summary>
+<details><summary>求取从 1 到 1000 的所有数的和</summary>
 
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr">1: </span><span style="color: #d3869b;">int</span> <span style="color: #83a598;">sum</span> = 0;
@@ -596,13 +580,8 @@
 </div>
 
 </details>
-</div>
-</div>
 
-<div id="outline-container-orgf2d2fdc" class="outline-4">
-<h4 id="orgf2d2fdc"><span class="section-number-4">4.1.3.</span> 求取从 1 到 1000 的所有数的平均数</h4>
-<div class="outline-text-4" id="text-4-1-3">
-<details><summary>答案仅供参考</summary>
+<details><summary>求取从 1 到 1000 的所有数的平均数</summary>
 
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #d3869b;">int</span> <span style="color: #83a598;">sum</span> = 0;
@@ -620,13 +599,8 @@
 </div>
 
 </details>
-</div>
-</div>
 
-<div id="outline-container-orgbb2aeee" class="outline-4">
-<h4 id="orgbb2aeee"><span class="section-number-4">4.1.4.</span> 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</h4>
-<div class="outline-text-4" id="text-4-1-4">
-<details><summary>答案仅供参考</summary>
+<details><summary>求取 int[] numbers = {1，2，3，4，5，6，7，8，9，10} 的平均值</summary>
 
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #d3869b;">int</span><span style="color: #458588;">[]</span> <span style="color: #83a598;">numbers</span> = <span style="color: #458588;">{</span>1, 2, 3, 4, 5, 6, 7, 8, 9, 10<span style="color: #458588;">}</span>;
@@ -646,7 +620,6 @@
 </div>
 
 </details>
-</div>
 </div>
 </div>
 </section>
