--- a/vvv/1-csharp.html
+++ b/vvv/1-csharp.html
@@ -34,7 +34,7 @@
 </p>
 
 
-<figure id="org81e5978">
+<figure id="org5a2a09a">
 <img src="img/01-hello-compile.png" alt="01-hello-compile.png" width="600px">
 
 </figure>
