--- a/.src/index.html
+++ b/.src/index.html
@@ -533,7 +533,7 @@
 </p>
 
 
-<figure id="org19c23a6">
+<figure id="orga61d920">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -556,11 +556,8 @@
 <h3 id="org83ea615"><span class="section-number-3">4.1.</span> 循环和条件判断</h3>
 <div class="outline-text-3" id="text-4-1">
 <ul class="org-ul">
-<li><p>
-打印从 1 到 1000 的所有数
-</p>
-
-<details><summary class=' sumopc'>参考答案</summary>
+<li>打印从 1 到 1000 的所有数  #+HTML: &lt;details&gt;</li>
+</ul>
 
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr">1: </span><span style="color: #fb4933;">for</span> <span style="color: #458588;">(</span><span style="color: #d3869b;">int</span> <span style="color: #83a598;">i</span> = 1; i &lt;= 1000; i++<span style="color: #458588;">)</span>
@@ -570,12 +567,11 @@
 </pre>
 </div>
 
-</details></li>
-<li><p>
-求取从 1 到 1000 的所有数的和
-</p>
+</details>
 
-<details><summary class=' sumopc'>参考答案</summary>
+<ul class="org-ul">
+<li>#+HTML: &lt;details&gt;&lt;summary&gt;求取从 1 到 1000 的所有数的和&lt;/summary&gt;</li>
+</ul>
 
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr">1: </span><span style="color: #d3869b;">int</span> <span style="color: #83a598;">sum</span> = 0;
@@ -587,12 +583,9 @@
 </pre>
 </div>
 
-</details></li>
-<li><p>
-求取从 1 到 1000 的所有数的平均数
-</p>
+</details>
 
-<details><summary class=' sumopc'>参考答案</summary>
+<details><summary>求取从 1 到 1000 的所有数的平均数</summary>
 
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #d3869b;">int</span> <span style="color: #83a598;">sum</span> = 0;
@@ -609,12 +602,9 @@
 </pre>
 </div>
 
-</details></li>
-<li><p>
-求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值
-</p>
+</details>
 
-<details><summary class=' sumopt'>参考答案</summary>
+<details><summary>求取 int[] numbers = {1，2，3，4，5，6，7，8，9，10} 的平均值</summary>
 
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #d3869b;">int</span><span style="color: #458588;">[]</span> <span style="color: #83a598;">numbers</span> = <span style="color: #458588;">{</span>1, 2, 3, 4, 5, 6, 7, 8, 9, 10<span style="color: #458588;">}</span>;
@@ -633,8 +623,7 @@
 </pre>
 </div>
 
-</details></li>
-</ul>
+</details>
 </div>
 </div>
 </section>
