--- a/191/index.html
+++ b/191/index.html
@@ -533,7 +533,7 @@
 </p>
 
 
-<figure id="org19c23a6">
+<figure id="org3abacce">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -560,7 +560,7 @@
 打印从 1 到 1000 的所有数
 </p>
 
-<details><summary class=' sumopc'>参考答案</summary>
+<details><summary class=' act1'>参考答案</summary>
 
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr">1: </span><span style="color: #fb4933;">for</span> <span style="color: #458588;">(</span><span style="color: #d3869b;">int</span> <span style="color: #83a598;">i</span> = 1; i &lt;= 1000; i++<span style="color: #458588;">)</span>
@@ -571,11 +571,12 @@
 </div>
 
 </details></li>
+
 <li><p>
 求取从 1 到 1000 的所有数的和
 </p>
 
-<details><summary class=' sumopc'>参考答案</summary>
+<details><summary class=' act1'>参考答案</summary>
 
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr">1: </span><span style="color: #d3869b;">int</span> <span style="color: #83a598;">sum</span> = 0;
@@ -588,11 +589,12 @@
 </div>
 
 </details></li>
+
 <li><p>
 求取从 1 到 1000 的所有数的平均数
 </p>
 
-<details><summary class=' sumopc'>参考答案</summary>
+<details><summary class=' act1'>参考答案</summary>
 
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #d3869b;">int</span> <span style="color: #83a598;">sum</span> = 0;
@@ -610,11 +612,12 @@
 </div>
 
 </details></li>
+
 <li><p>
 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值
 </p>
 
-<details><summary class=' sumopt'>参考答案</summary>
+<details><summary class=' act1'>参考答案</summary>
 
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #d3869b;">int</span><span style="color: #458588;">[]</span> <span style="color: #83a598;">numbers</span> = <span style="color: #458588;">{</span>1, 2, 3, 4, 5, 6, 7, 8, 9, 10<span style="color: #458588;">}</span>;
