--- a/191/index.html
+++ b/191/index.html
@@ -25,7 +25,14 @@
 <li><a href="#org42a84ad">3. 寒假作业 (2024-01-15)</a></li>
 <li><a href="#org3d7cc04">4. 练习题备忘</a>
 <ul>
-<li><a href="#org83ea615">4.1. 循环和条件判断</a></li>
+<li><a href="#org83ea615">4.1. 循环和条件判断</a>
+<ul>
+<li><a href="#orge1c3e88">4.1.1. 打印从 1 到 1000 的所有数</a></li>
+<li><a href="#orgcb0c8a2">4.1.2. 求取从 1 到 1000 的所有数的和</a></li>
+<li><a href="#orgd1b55c7">4.1.3. 求取从 1 到 1000 的所有数的平均数</a></li>
+<li><a href="#org3685d43">4.1.4. 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</a></li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
@@ -533,7 +540,7 @@
 </p>
 
 
-<figure id="org3abacce">
+<figure id="orgf5c4f26">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -555,11 +562,10 @@
 <div id="outline-container-org83ea615" class="outline-3">
 <h3 id="org83ea615"><span class="section-number-3">4.1.</span> 循环和条件判断</h3>
 <div class="outline-text-3" id="text-4-1">
-<ul class="org-ul">
-<li><p>
-打印从 1 到 1000 的所有数
-</p>
-
+</div>
+<div id="outline-container-orge1c3e88" class="outline-4">
+<h4 id="orge1c3e88"><span class="section-number-4">4.1.1.</span> 打印从 1 到 1000 的所有数</h4>
+<div class="outline-text-4" id="text-4-1-1">
 <details><summary class=' act1'>参考答案</summary>
 
 <div class="org-src-container">
@@ -570,12 +576,13 @@
 </pre>
 </div>
 
-</details></li>
+</details>
+</div>
+</div>
 
-<li><p>
-求取从 1 到 1000 的所有数的和
-</p>
-
+<div id="outline-container-orgcb0c8a2" class="outline-4">
+<h4 id="orgcb0c8a2"><span class="section-number-4">4.1.2.</span> 求取从 1 到 1000 的所有数的和</h4>
+<div class="outline-text-4" id="text-4-1-2">
 <details><summary class=' act1'>参考答案</summary>
 
 <div class="org-src-container">
@@ -588,12 +595,13 @@
 </pre>
 </div>
 
-</details></li>
+</details>
+</div>
+</div>
 
-<li><p>
-求取从 1 到 1000 的所有数的平均数
-</p>
-
+<div id="outline-container-orgd1b55c7" class="outline-4">
+<h4 id="orgd1b55c7"><span class="section-number-4">4.1.3.</span> 求取从 1 到 1000 的所有数的平均数</h4>
+<div class="outline-text-4" id="text-4-1-3">
 <details><summary class=' act1'>参考答案</summary>
 
 <div class="org-src-container">
@@ -611,12 +619,13 @@
 </pre>
 </div>
 
-</details></li>
+</details>
+</div>
+</div>
 
-<li><p>
-求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值
-</p>
-
+<div id="outline-container-org3685d43" class="outline-4">
+<h4 id="org3685d43"><span class="section-number-4">4.1.4.</span> 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</h4>
+<div class="outline-text-4" id="text-4-1-4">
 <details><summary class=' act1'>参考答案</summary>
 
 <div class="org-src-container">
@@ -636,8 +645,8 @@
 </pre>
 </div>
 
-</details></li>
-</ul>
+</details>
+</div>
 </div>
 </div>
 </section>
