--- a/191/index.html
+++ b/191/index.html
@@ -540,7 +540,7 @@
 </p>
 
 
-<figure id="orgf5c4f26">
+<figure id="org9e2e91b">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -563,10 +563,11 @@
 <h3 id="org83ea615"><span class="section-number-3">4.1.</span> 循环和条件判断</h3>
 <div class="outline-text-3" id="text-4-1">
 </div>
+
 <div id="outline-container-orge1c3e88" class="outline-4">
 <h4 id="orge1c3e88"><span class="section-number-4">4.1.1.</span> 打印从 1 到 1000 的所有数</h4>
 <div class="outline-text-4" id="text-4-1-1">
-<details><summary class=' act1'>参考答案</summary>
+<details><summary>参考答案</summary>
 
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr">1: </span><span style="color: #fb4933;">for</span> <span style="color: #458588;">(</span><span style="color: #d3869b;">int</span> <span style="color: #83a598;">i</span> = 1; i &lt;= 1000; i++<span style="color: #458588;">)</span>
@@ -583,7 +584,7 @@
 <div id="outline-container-orgcb0c8a2" class="outline-4">
 <h4 id="orgcb0c8a2"><span class="section-number-4">4.1.2.</span> 求取从 1 到 1000 的所有数的和</h4>
 <div class="outline-text-4" id="text-4-1-2">
-<details><summary class=' act1'>参考答案</summary>
+<details><summary>参考答案</summary>
 
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr">1: </span><span style="color: #d3869b;">int</span> <span style="color: #83a598;">sum</span> = 0;
@@ -602,7 +603,7 @@
 <div id="outline-container-orgd1b55c7" class="outline-4">
 <h4 id="orgd1b55c7"><span class="section-number-4">4.1.3.</span> 求取从 1 到 1000 的所有数的平均数</h4>
 <div class="outline-text-4" id="text-4-1-3">
-<details><summary class=' act1'>参考答案</summary>
+<details><summary>参考答案</summary>
 
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #d3869b;">int</span> <span style="color: #83a598;">sum</span> = 0;
@@ -626,7 +627,7 @@
 <div id="outline-container-org3685d43" class="outline-4">
 <h4 id="org3685d43"><span class="section-number-4">4.1.4.</span> 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</h4>
 <div class="outline-text-4" id="text-4-1-4">
-<details><summary class=' act1'>参考答案</summary>
+<details><summary>参考答案</summary>
 
 <div class="org-src-container">
 <pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #d3869b;">int</span><span style="color: #458588;">[]</span> <span style="color: #83a598;">numbers</span> = <span style="color: #458588;">{</span>1, 2, 3, 4, 5, 6, 7, 8, 9, 10<span style="color: #458588;">}</span>;
