--- a/191/index.html
+++ b/191/index.html
@@ -540,7 +540,7 @@
 </p>
 
 
-<figure id="org9e2e91b">
+<figure id="org169bc58">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -563,7 +563,6 @@
 <h3 id="org83ea615"><span class="section-number-3">4.1.</span> 循环和条件判断</h3>
 <div class="outline-text-3" id="text-4-1">
 </div>
-
 <div id="outline-container-orge1c3e88" class="outline-4">
 <h4 id="orge1c3e88"><span class="section-number-4">4.1.1.</span> 打印从 1 到 1000 的所有数</h4>
 <div class="outline-text-4" id="text-4-1-1">
